group 'ecdar'
version '2.0'

apply plugin: 'java'

sourceCompatibility = 1.8

//create a single Jar with all dependencies
task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'ecdar.Ecdar'
    }
    baseName = project.name
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

repositories {
    mavenCentral()
    maven {
        url "https://dl.bintray.com/aalmiray/kordamp"
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'com.jfoenix:jfoenix:1.11.1'
    compile group: 'de.codecentric.centerdevice', name: 'javafxsvg', version: '1.0.0'
    compile group: 'com.github.jiconfont', name: 'jiconfont-javafx', version: '1.0.0'
    compile group: 'com.github.jiconfont', name: 'jiconfont-google_material_design_icons', version: '2.2.0.1'
    compile 'org.kordamp.ikonli:ikonli-core:1.8.0'
    compile 'org.kordamp.ikonli:ikonli-material-pack:1.8.0'
    compile 'org.kordamp.ikonli:ikonli-javafx:1.8.0'
    compile 'com.google.code.gson:gson:2.8.0'
    compile group: 'com.google.guava', name: 'guava', version: 'r05'
    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.6.10'
    compile fileTree(dir: 'src/libs', include: ['*.jar'])
}